<resources>
    <string name="app_name">Keep Talking and Nobody Explodes Companion</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Even">Even</string>
    <string name="Odd">Odd</string>
    <string name="Strike1Slide">Strike 1</string>
    <string name="Strike2Slide">Strike 2</string>
    <string name="ColorBlue">Blue</string>
    <string name="ColorYellow">Yellow</string>
    <string name="ColorGreen">Black</string>
    <string name="ColorWhite">White</string>
    <string name="ColorRed">Red</string>
    <string name="WiresHeader">Number of Wires (3-4-5-6)</string>
    <string name="PopulateControls">Populate Controls</string>
    <string name="WireResult">Process Wires</string>
    <string name="WireOne">WireOne</string>
    <string name="WireTwo">WireTwo</string>
    <string name="WireThree">WireThree</string>
    <string name="WireFour">WireFour</string>
    <string name="WireFive">WireFive</string>
    <string name="WireSix">WireSix</string>
    <string name="OnTheSubjectOfWire">On the Subject of Wires</string>
    <string name="CutSecondWire">Cut the Second Wire</string>
    <string name="Cutthelastwire">Cut The Last Wire</string>
    <string name="WiresResult">Cut The Second Wire</string>
    <string name="title_activity_wires_1">Wires_1</string>
    <string name="TapMe">Tap me!</string>
    <string name="Sumit">Get Result</string>
    <string name="BTNSteup">Setup Questions</string>
    <string name="OnTheSubjectOf">On the Subject of...</string>
    <string name="WiresCMD">SimpleWires</string>
    <string name="ButtonCMD">Push Button</string>
    <string name="KeypadsCMD">Keypads</string>
    <string name="SimonSaysCMD">Simon Says</string>
    <string name="WhoisOn1stCMD">Who is on 1st</string>
    <string name="MemoryCMD">Memory</string>
    <string name="MorseCodeCMD">Morse Code</string>
    <string name="ComplexWires">Complex Wires</string>
    <string name="WireSequencesCMD">Wire Sequences</string>
    <string name="MazesCMD">Mazes</string>
    <string name="PasswordsCMD">Passwords</string>
    <string name="BombManual">Bomb Manual</string>
    <string name="LabelSteup">Setup Questions</string>
    <string name="Reset">Reset</string>
    <string name="Save">Save</string>
    <string name="ContainsVowel">Does Serial Number Contain a Vowel?</string>
    <string name="SerialNum">Last Digit in Serial Number Even?</string>
    <string name="NumberofBat">What is the number of batteries on the bomb?</string>
    <string name="CARLIT">Is the CAR indicator lit?</string>
    <string name="FRKLIT">Is the FRK indicator lit? </string>
    <string name="ParalellPort">Does the bomb have a paralell port?</string>
    <string name="BTNColor">Button Color</string>
    <string name="BTNBlue">Blue</string>
    <string name="OtherColor">Other Color</string>
    <string name="BTNAbort">Abort</string>
    <string name="BTNDetonate">Detonate</string>
    <string name="BTNHold">Hold</string>
    <string name="BTNOther">Other Text</string>
    <string name="ButtonName">Button Text</string>
    <string name="ButtonStripColor">Strip Color</string>
    <string name="ButtonSolution">Answer</string>
    <string name="PressHold"><![CDATA[Press & Hold]]></string>
    <string name="LetterA">A</string>
    <string name="lblPassword1">First Letters</string>
    <string name="LetterB">B</string>
    <string name="LetterC">C</string>
    <string name="LetterE">E</string>
    <string name="LetterF">F</string>
    <string name="LetterG">G</string>
    <string name="LetterH">H</string>
    <string name="LetterL">L</string>
    <string name="LetterN">N</string>
    <string name="LetterO">O</string>
    <string name="LetterP">P</string>
    <string name="LetterR">R</string>
    <string name="LetterS">S</string>
    <string name="LetterT">T</string>
    <string name="lblPassword2">Second Letter</string>
    <string name="LetterW">W</string>
    <string name="WordFirst">First</string>
    <string name="WordSecond">Second</string>
    <string name="WordThrid">Thrid</string>
    <string name="WordForth">Forth</string>
    <string name="WordFifth">Fifth</string>
    <string name="PasswordsTitle">Passwords</string>
    <string name="BTNcheckanswers">Check For Answers</string>
    <string name="FifthLetter">Fifth Letter</string>
    <string name="FourthLetter">Fourth Letter</string>
    <string name="ThridLetter">Thrid Letter</string>
    <string name="FirstLetter">First Letter</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_setuplanscape">setuplanscape</string>
    <string name="title_activity_setup_scrolling">SetupScrolling</string>
    <string name="title_activity_simple_wires_scrolling">SimpleWiresScrollingActivity</string>
    <string name="title_activity_simon_says">SimonSays</string>
    <string name="Num1">1</string>
    <string name="Num2">2</string>
    <string name="Num3">3</string>
    <string name="Num4">4</string>
    <string name="Num5">5</string>
    <string name="EqualsSign">=</string>
    <string name="SimonSaysTitle">Simon Says</string>
    <string name="StrikeOne">One Strike</string>
    <string name="Strikes"># of Strikes</string>
    <string name="title_activity_keypads">Keypads</string>
    <string name="ok">OK</string>
    <string name="HasRed">Has Red</string>
    <string name="HasBlue">Has Blue</string>
    <string name="Hasstar">Has Star</string>
    <string name="LEDon">LED ON</string>
    <string name="Mazes">Mazes</string>
    <string name="MazeInstructions">To start, Tap the maze to start. Tap the green circles to clear or use the button below.</string>
    <string name="Clear">Clear</string>
    <string name="Clearmaze">Clear Maze</string>
    <string name="morsecodetitle">Morse Code</string>
    <string name="bntmorse">Light Flash</string>
    <string name="whoonfirstquestion">What is their Number?</string>
    <string name="whoonfirstquestion2">What position was the answer in?</string>
</resources>