<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tmkin.keeptalkingandnobodyexplodescompanion.Setup"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <ImageView
        android:id="@+id/SetupLogo"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/LogoBackground"
        android:contentDescription="HeaderLogo"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header" />

    <TextView
        android:id="@+id/TitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/ButtonBackground"
        android:text="@string/LabelSteup"
        android:textAlignment="center"
        android:textColor="@color/ButtonText"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SetupLogo" />

    <TextView
        android:id="@+id/SerialNumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:background="@color/LogoBackground"
        android:text="@string/SerialNum"
        android:textColor="@color/ButtonText"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/SerialNumToggle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/VowelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/LogoBackground"
        android:text="@string/ContainsVowel"
        android:textColor="@color/ButtonText"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/VowelToggle"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/CARTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/LogoBackground"
        android:text="@string/CARLIT"
        android:textColor="@color/ButtonText"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/CARToggle"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/FRKTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/LogoBackground"
        android:text="@string/FRKLIT"
        android:textColor="@color/ButtonText"
        android:textStyle="bold"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/FRKToggle"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/ParalellTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/LogoBackground"
        android:text="@string/ParalellPort"
        android:textColor="@color/ButtonText"
        android:textStyle="bold"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/ParalellToggle"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/BatteryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/LogoBackground"
        android:text="@string/NumberofBat"
        android:textColor="@color/ButtonText"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/ParalellToggle" />

    <ToggleButton
        android:id="@+id/SerialNumToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/ButtonBackground"
        android:checked="false"
        android:textColor="@color/ButtonText"
        android:textOff="@string/Even"
        android:textOn="@string/Odd"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleTextView" />

    <ToggleButton
        android:id="@+id/CARToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/ButtonBackground"
        android:textColor="@color/ButtonText"
        android:textOff="@string/Yes"
        android:textOn="@string/No"
        app:layout_constraintLeft_toLeftOf="@+id/VowelToggle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/VowelToggle" />

    <ToggleButton
        android:id="@+id/VowelToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="9dp"
        android:background="@color/ButtonBackground"
        android:textColor="@color/ButtonText"
        android:textOff="@string/Yes"
        android:textOn="@string/No"
        app:layout_constraintLeft_toLeftOf="@+id/SerialNumToggle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SerialNumToggle" />

    <ToggleButton
        android:id="@+id/FRKToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/ButtonBackground"
        android:textColor="@color/ButtonText"
        android:textOff="@string/Yes"
        android:textOn="@string/No"
        app:layout_constraintLeft_toLeftOf="@+id/CARToggle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CARToggle" />

    <ToggleButton
        android:id="@+id/ParalellToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/ButtonBackground"
        android:textColor="@color/ButtonText"
        android:textOff="@string/Yes"
        android:textOn="@string/No"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FRKToggle" />

    <SeekBar
        android:id="@+id/BatterySeek"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/ButtonText"
        android:max="6"
        android:progress="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BatteryTextView" />

    <Button
        android:id="@+id/SaveCMD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="saveClicked"
        android:text="@string/Save"
        android:textColor="@color/text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BatterySeek" />

</android.support.constraint.ConstraintLayout>
