<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tmkin.keeptalkingandnobodyexplodescompanion.complex_wires">

    <RelativeLayout
        android:layout_width="391dp"
        android:layout_height="630dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">

        <Switch
            android:id="@+id/swtblueone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/HasBlue"
            android:textColor="@android:color/white"
            android:layout_below="@+id/swtRedone"
            android:layout_alignLeft="@+id/swtRedone"
            android:layout_alignStart="@+id/swtRedone" />

        <Switch
            android:id="@+id/swtRedone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="26dp"
            android:text="@string/HasRed"
            android:textColor="@android:color/white" />

        <Switch
            android:id="@+id/swtledone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/swtRedone"
            android:layout_alignBottom="@+id/swtRedone"
            android:layout_alignLeft="@+id/SWTstarone"
            android:layout_alignStart="@+id/SWTstarone"
            android:text="@string/LEDon"
            android:textColor="@android:color/white" />

        <Switch
            android:id="@+id/SWTstarone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/swtblueone"
            android:layout_alignBottom="@+id/swtblueone"
            android:layout_marginLeft="21dp"
            android:layout_marginStart="21dp"
            android:layout_toEndOf="@+id/swtblueone"
            android:layout_toRightOf="@+id/swtblueone"
            android:text="@string/Hasstar"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/lblcomplexone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/SWTstarone"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
